--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Flat 3D</title>
-        <link rel="icon" type="image/x-icon" href="/favicon.png">
+        <link rel="icon" type="image/x-icon" href="./favicon.png">
         <meta name="description" content="ThreeJs flat preview">
-        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="./style.css">
 
         <script type="importmap">
             {
@@ -18,6 +18,6 @@
           </script>
     </head>
     <body>
-        <script src="/script.js" type="module" async defer></script>
+        <script src="./script.js" type="module" async defer></script>
     </body>
 </html>
